# zl-thesis

./: .gitignore  README.md  TODO.MD  environment.yml  pyproject.toml  test_reve_loader.py
baselines/cl-cs/: extract_pretrainFeat.py  io_utils.py  load_data.py  main_classify.py  main_pretrain.py  model.py  reorder_vids.py  run_code.py  running_norm.py  simCLR.py  smooth_lds.py  test.py  test_dimensions.py  train_utils.py
configs/: thu_ep.yml
docs/: PREPROCESSING_PIPELINE.md  SEED_CNT_HEADER_CORRUPTION.md  SEED_PREPROCESSING_PIPELINE.md  TODO.MD  batching_strategy.md  claude_lp_instructions.md  excluded_data.md  experimental_plan.md  linear_probing_results.md  lora_results.md  plan.md  plan_2.md  thesis_direction.md
docs/seed/: MNE_CONCEPTS.md
docs/zl/: ZL_PREPROCESSING_PIPELINE.md
notebooks/: data_exploration.ipynb
outputs/lp_checkpoints/: summary_9-class_w10s10_nopool_flat.json  summary_9-class_w10s10_nopool_flat_gen_cross_seed.json  summary_9-class_w10s10_nopool_flat_gen_s101.json  summary_9-class_w10s10_nopool_flat_gen_s123.json  summary_9-class_w10s10_nopool_flat_gen_s202.json  summary_9-class_w10s10_nopool_flat_gen_s456.json  summary_9-class_w10s10_nopool_flat_gen_s789.json  summary_9-class_w10s10_pool.json  summary_9-class_w10s10_pool_gen_cross_seed.json  summary_9-class_w10s10_pool_gen_s101.json  summary_9-class_w10s10_pool_gen_s123.json  (+43 more)
scripts/: inspect_folds.py
src/: config.py
test-reve/: Copy_of_REVE_Tutorial_EEGMAT.ipynb  README.md  data_exploration.ipynb  eeg_preprocessing_mne.ipynb
tests/: conftest.py  test_zl_dataset.py
(+148 files in other folders)
